- Activiteitenpagina toegevoegd - Incheckpagina toegevoegd - Navigatie aan pagina's toegevoegd

--- a/Unforkdd/Unforkdd.csproj
+++ b/Unforkdd/Unforkdd.csproj
@@ -53,6 +53,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="ActiviteitenPagina.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="IncheckPagina.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="LoginPagina.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
