--- a/Unforkdd/Unforkdd.csproj
+++ b/Unforkdd/Unforkdd.csproj
@@ -69,6 +69,12 @@
 	  <MauiXaml Update="LoginPagina.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ProfielBewerkenPagina.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ProfielPagina.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="RegistratiePagina.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
